--- a/pro/dv2520/dv2520.vcxproj.filters
+++ b/pro/dv2520/dv2520.vcxproj.filters
@@ -3,9 +3,20 @@
   <ItemGroup>
     <ClCompile Include="..\..\src\dv2520\main.cpp" />
     <ClCompile Include="..\..\src\dv2520\Util.cpp" />
+    <ClCompile Include="..\..\src\dv2520\Win.cpp">
+      <Filter>Win</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\dv2520\stdafx.h" />
     <ClInclude Include="..\..\src\dv2520\Util.h" />
+    <ClInclude Include="..\..\src\dv2520\Win.h">
+      <Filter>Win</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Win">
+      <UniqueIdentifier>{e6d78c9c-013c-47db-bcbb-79e83978c29d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
