--- a/pro/dv2520/dv2520.vcxproj
+++ b/pro/dv2520/dv2520.vcxproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\src\dv2520\Buf.cpp" />
     <ClCompile Include="..\..\src\dv2520\BufUav.cpp" />
+    <ClCompile Include="..\..\src\dv2520\Cam.cpp" />
     <ClCompile Include="..\..\src\dv2520\CogD3d.cpp" />
     <ClCompile Include="..\..\src\dv2520\CogFx.cpp" />
     <ClCompile Include="..\..\src\dv2520\Dx.cpp" />
@@ -90,6 +91,7 @@
     <ClCompile Include="..\..\src\dv2520\Fx.cpp" />
     <ClCompile Include="..\..\src\dv2520\FxCs.cpp" />
     <ClCompile Include="..\..\src\dv2520\main.cpp" />
+    <ClCompile Include="..\..\src\dv2520\MathSimple.cpp" />
     <ClCompile Include="..\..\src\dv2520\Timer.cpp" />
     <ClCompile Include="..\..\src\dv2520\TimerDelta.cpp" />
     <ClCompile Include="..\..\src\dv2520\Util.cpp" />
@@ -98,6 +100,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\src\dv2520\Buf.h" />
     <ClInclude Include="..\..\src\dv2520\BufUav.h" />
+    <ClInclude Include="..\..\src\dv2520\Cam.h" />
     <ClInclude Include="..\..\src\dv2520\CogD3d.h" />
     <ClInclude Include="..\..\src\dv2520\CogFx.h" />
     <ClInclude Include="..\..\src\dv2520\Dx.h" />
@@ -105,6 +108,7 @@
     <ClInclude Include="..\..\src\dv2520\ExceptionDv2520.h" />
     <ClInclude Include="..\..\src\dv2520\Fx.h" />
     <ClInclude Include="..\..\src\dv2520\FxCs.h" />
+    <ClInclude Include="..\..\src\dv2520\MathSimple.h" />
     <ClInclude Include="..\..\src\dv2520\stdafx.h" />
     <ClInclude Include="..\..\src\dv2520\Timer.h" />
     <ClInclude Include="..\..\src\dv2520\TimerDelta.h" />
@@ -112,7 +116,7 @@
     <ClInclude Include="..\..\src\dv2520\Win.h" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="..\..\fxs\Test.fx">
+    <FxCompile Include="..\..\fxs\CsLighting.fx">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Compute</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Compute</ShaderType>
