--- a/pro/dv2520/dv2520.vcxproj.filters
+++ b/pro/dv2520/dv2520.vcxproj.filters
@@ -29,6 +29,8 @@
     <ClCompile Include="..\..\src\dv2520\ExceptionDv2520.cpp" />
     <ClCompile Include="..\..\src\dv2520\Timer.cpp" />
     <ClCompile Include="..\..\src\dv2520\TimerDelta.cpp" />
+    <ClCompile Include="..\..\src\dv2520\Cam.cpp" />
+    <ClCompile Include="..\..\src\dv2520\MathSimple.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\dv2520\stdafx.h" />
@@ -59,6 +61,8 @@
     <ClInclude Include="..\..\src\dv2520\ExceptionDv2520.h" />
     <ClInclude Include="..\..\src\dv2520\Timer.h" />
     <ClInclude Include="..\..\src\dv2520\TimerDelta.h" />
+    <ClInclude Include="..\..\src\dv2520\Cam.h" />
+    <ClInclude Include="..\..\src\dv2520\MathSimple.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Dx">
@@ -72,7 +76,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="..\..\fxs\Test.fx">
+    <FxCompile Include="..\..\fxs\CsLighting.fx">
       <Filter>Fxs</Filter>
     </FxCompile>
   </ItemGroup>
