Implemented demo pointlighting. # This is a combination of 2 commits.
Added Light-srv. Committing as I wont have time to work on the project for a day, so this is a temporary commit. Be sure to merge this commit with a proper one.

Implemented demo pointlighting.

--- a/pro/dv2520/dv2520.vcxproj.filters
+++ b/pro/dv2520/dv2520.vcxproj.filters
@@ -151,6 +151,7 @@
     <ClInclude Include="..\..\src\dv2520\ObjInstance.h">
       <Filter>Dx</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\dv2520\Light.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Dx">
@@ -195,6 +196,9 @@
       <Filter>Fxs</Filter>
     </FxCompile>
     <FxCompile Include="..\..\fxs\ObjInstance.fx">
+      <Filter>Fxs</Filter>
+    </FxCompile>
+    <FxCompile Include="..\..\fxs\Light.fx">
       <Filter>Fxs</Filter>
     </FxCompile>
   </ItemGroup>
