Replaced slow and bloated Wavefront Obj-parser with a more lightweight variant.

--- a/pro/dv2520/dv2520.vcxproj
+++ b/pro/dv2520/dv2520.vcxproj
@@ -108,11 +108,13 @@
     <ClCompile Include="..\..\src\dv2520\FxCs.cpp" />
     <ClCompile Include="..\..\src\dv2520\Input.cpp" />
     <ClCompile Include="..\..\src\dv2520\InputQueue.cpp" />
+    <ClCompile Include="..\..\src\dv2520\lbo.cc" />
+    <ClCompile Include="..\..\src\dv2520\lbo_File.cc" />
+    <ClCompile Include="..\..\src\dv2520\lbo_ObjParser.cc" />
+    <ClCompile Include="..\..\src\dv2520\lbo_util.cc" />
     <ClCompile Include="..\..\src\dv2520\main.cpp" />
     <ClCompile Include="..\..\src\dv2520\MathSimple.cpp" />
     <ClCompile Include="..\..\src\dv2520\Obj.cpp" />
-    <ClCompile Include="..\..\src\dv2520\ObjFace.cpp" />
-    <ClCompile Include="..\..\src\dv2520\RdrObj.cpp" />
     <ClCompile Include="..\..\src\dv2520\Timer.cpp" />
     <ClCompile Include="..\..\src\dv2520\TimerD3d.cpp" />
     <ClCompile Include="..\..\src\dv2520\TimerDelta.cpp" />
@@ -142,14 +144,17 @@
     <ClInclude Include="..\..\src\dv2520\FxCs.h" />
     <ClInclude Include="..\..\src\dv2520\Input.h" />
     <ClInclude Include="..\..\src\dv2520\InputQueue.h" />
+    <ClInclude Include="..\..\src\dv2520\lbo.h" />
+    <ClInclude Include="..\..\src\dv2520\lbo_File.h" />
+    <ClInclude Include="..\..\src\dv2520\lbo_ObjParser.h" />
+    <ClInclude Include="..\..\src\dv2520\lbo_util.h" />
+    <ClInclude Include="..\..\src\dv2520\lbo_vertex.h" />
     <ClInclude Include="..\..\src\dv2520\Light.h" />
     <ClInclude Include="..\..\src\dv2520\ObjInstance.h" />
     <ClInclude Include="..\..\src\dv2520\Intersection.h" />
     <ClInclude Include="..\..\src\dv2520\MathSimple.h" />
     <ClInclude Include="..\..\src\dv2520\Obj.h" />
-    <ClInclude Include="..\..\src\dv2520\ObjFace.h" />
     <ClInclude Include="..\..\src\dv2520\Ray.h" />
-    <ClInclude Include="..\..\src\dv2520\RdrObj.h" />
     <ClInclude Include="..\..\src\dv2520\Singleton.h" />
     <ClInclude Include="..\..\src\dv2520\stdafx.h" />
     <ClInclude Include="..\..\src\dv2520\Timer.h" />
